Swagger fix, update-role added
