# openapi/swagger.yaml
@@ -176,7 +176,7 @@ definitions:
       amount:
         type: integer
         format: int32
-        description: Amout of the donation in $.
+        description: Amount of the donation in $.
       creationDate:
         type: string
         format: date-time
@@ -305,6 +305,91 @@ paths:
               error:
                 type: string
                 description: Error message for internal server error.
+  /users/{userId}:
+    get:
+      summary: "Returns a specific user"
+      produces:
+        - application/json
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          type: string
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: "#/definitions/User"
+    put:
+      summary: "Updates a specific user"
+      security:
+        - bearer: [ ]
+      produces:
+        - application/json
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          type: string
+        - name: name
+          in: body
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+                required: true
+        - name: email
+          in: body
+          schema:
+            type: object
+            properties:
+              email:
+                type: string
+                required: true
+        - name: password
+          in: body
+          schema:
+            type: object
+            properties:
+              password:
+                type: string
+                required: true
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        400:
+          description: Failed to update
+  /users/update-role/{userId}:
+    put:
+      summary: "Updates a specific user role"
+      security:
+        - bearer: [ ]
+      produces:
+        - application/json
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          type: string
+        - name: role
+          description: Role is enum "ADMIN","USER"
+          in: body
+          schema:
+            type: object
+            properties:
+              role:
+                type: string
+                required: true
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        400:
+          description: Failed to update
 
   # Auth
   /authentication/custom-token:
@@ -549,7 +634,6 @@ paths:
             items:
               $ref: "#/definitions/Project"
 
-
   # Project update
   /projects/{projectId}/posts:
     get:
@@ -574,7 +658,6 @@ paths:
             properties:
               message:
                 type: string
-
     post:
       summary: Add a new project post
       security:
@@ -640,7 +723,6 @@ paths:
             properties:
               message:
                 type: string
-
     post:
       summary: Update a specific project post
       security:
@@ -801,7 +883,6 @@ paths:
             properties:
               message:
                 type: string
-
     post:
       summary: Update a specific project rating
       parameters:
@@ -842,7 +923,6 @@ paths:
             properties:
               message:
                 type: string
-
     delete:
       summary: Delete a specific project rating
       parameters:
@@ -898,7 +978,6 @@ paths:
             properties:
               message:
                 type: string
-
     post:
       summary: Add a new project comment
       security:
@@ -961,7 +1040,6 @@ paths:
             properties:
               message:
                 type: string
-
     post:
       summary: Update a specific project comment
       security:
@@ -1003,7 +1081,6 @@ paths:
             properties:
               message:
                 type: string
-
     delete:
       summary: Delete a specific project comment
       security:
@@ -1169,7 +1246,7 @@ paths:
           schema:
             type: object
             properties:
-              name:
+              donationId:
                 type: string
                 required: true
         - name: amount
@@ -1177,7 +1254,7 @@ paths:
           schema:
             type: object
             properties:
-              name:
+              amount:
                 type: number
                 required: true
       produces:
@@ -1189,7 +1266,7 @@ paths:
           description: Unauthorized
         400:
           description: Failed to create
-  /donations/{categoryId}:
+  /donations/{donationId}:
     get:
       summary: "Returns a specific donation"
       produces:
@@ -1221,7 +1298,7 @@ paths:
           schema:
             type: object
             properties:
-              name:
+              paymentStatus:
                 type: string
                 required: true
       responses:
@@ -1232,7 +1309,7 @@ paths:
         400:
           description: Failed to update
     delete:
-      summary: Delete a specific category
+      summary: Delete a specific donation
       security:
         - bearer: [ ]
       parameters:
@@ -1247,7 +1324,7 @@ paths:
           schema:
             type: object
             properties:
-              name:
+              paymentStatus:
                 type: string
                 required: true
       responses:
